[package]
name = "this_updater_of_mine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
sysinfo = "0.33"
tar = "0.4"
zip = "2.2"
zip-extensions = "0.8"

[profile.release]
opt-level = "z" # Optimize for size.
lto = "fat"     # Enable Link Time Optimization
strip = true    # Automatically strip symbols from the binary.
